Update Group 28 Files

--- a/content/posters/2025/Q4/Group 28/students/Calin-Stefan Georgescu/student_info.yaml
+++ b/content/posters/2025/Q4/Group 28/students/Calin-Stefan Georgescu/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Adaptability and Latency in Network Reconfigurations of Virtualized Network Functions in 5G Networks
-paperUrl: ''
+paperUrl: 'https://resolver.tudelft.nl/uuid:0562e17f-81c7-44a3-813d-92bf943c777a'
 firstName: Calin
 lastName: Georgescu
 repositoryUrl: ''
