--- a/content/posters/2025/Q4/Group 28/students/Vlad-Ioan Dragutoiu/student_info.yaml
+++ b/content/posters/2025/Q4/Group 28/students/Vlad-Ioan Dragutoiu/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Characterizing traffic destinations and temporal trends for adaptive network resource management in 5G/6G networks
-paperUrl: ''
+paperUrl: 'https://resolver.tudelft.nl/uuid:20cc080c-1cb8-4b6e-9066-8aad82ad75e7'
 firstName: Vlad
 lastName: Dragutoiu
 repositoryUrl: ''
