--- a/content/posters/2025/Q4/Group 28/students/Kevin Ji Shan/student_info.yaml
+++ b/content/posters/2025/Q4/Group 28/students/Kevin Ji Shan/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Measuring resource consumption and latency in virtual environment
-paperUrl: ''
+paperUrl: 'https://repository.tudelft.nl/record/uuid:b0e01d86-e482-4baa-b76b-6aa5beab3289'
 firstName: Kevin
 lastName: Ji Shan
 repositoryUrl: ''
