Add Group 72 files. (#450)
* Add Group 72 files.

* Update student_info.yaml

Added the manually created paper link from pure.

* Update student_info.yaml

---------

Co-authored-by: Andrei-Chiru <122799746+Andrei-Chiru@users.noreply.github.com>
Co-authored-by: Francesco Hamar <F.hamar@student.tudelft.nl>
Co-authored-by: CSE3000-research-project <66999554+CSE3000-research-project@users.noreply.github.com>

--- a/content/posters/2025/Q4/Group 72/students/Andrei Chiru/student_info.yaml
+++ b/content/posters/2025/Q4/Group 72/students/Andrei Chiru/student_info.yaml
@@ -1,5 +1,5 @@
-thesisTitle: How Robust Is Neural-Symbolic Model Logic Tensor Networks Against
-  Clean-Label Data Poisoning Backdoor Attacks?
+
+thesisTitle: How Robust Is Neural-Symbolic Model Logic Tensor Networks Against Clean-Label Data Poisoning Backdoor Attacks?
 paperUrl: 'https://resolver.tudelft.nl/uuid:46cbc127-bc57-41fb-af0a-562a4fcac9d9'
 firstName: Andrei
 lastName: Chiru
