Add Group 16 files. (#429)
* Add Group 16 files.

* Update content/posters/2025/Q4/Group 16/students/Kasper van Maasdam/student_info.yaml

Co-authored-by: Kasper van Maasdam <kaspervanm@gmail.com>

---------

Co-authored-by: CSE3000-research-project <66999554+CSE3000-research-project@users.noreply.github.com>
Co-authored-by: Kasper van Maasdam <kaspervanm@gmail.com>

--- a/content/posters/2025/Q4/Group 16/students/Antreas Economides/student_info.yaml
+++ b/content/posters/2025/Q4/Group 16/students/Antreas Economides/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Visualizing Experience Sampling Data to Enhance Clinical Insights into Mental Resilience
-paperUrl: 'https://resolver.tudelft.nl/uuid:452ee6c5-046f-454c-a53e-7a7da056c82d'
+paperUrl: 'https://repository.tudelft.nl/record/uuid:452ee6c5-046f-454c-a53e-7a7da056c82d'
 firstName: Antreas
 lastName: Economides
 repositoryUrl: ''
