--- a/content/posters/2025/Q4/Group 27/students/Christiaan Baraya/student_info.yaml
+++ b/content/posters/2025/Q4/Group 27/students/Christiaan Baraya/student_info.yaml
@@ -1,4 +1,4 @@
-thesisTitle: The Influence of Ground Infrastructure Proximity on Starlinks Performance: A Novel Method to Unravel Starlinks Network Routing
+thesisTitle: 'The Influence of Ground Infrastructure Proximity on Starlinks Performance: A Novel Method to Unravel Starlinks Network Routing'
 paperUrl: 'https://repository.tudelft.nl/record/uuid:f962d8bc-494f-4917-ad10-b4169095021d'
 firstName: Christiaan
 lastName: Baraya
