--- a/content/posters/2025/Q4/Group 52/students/Daniël 't Mannetje/student_info.yaml
+++ b/content/posters/2025/Q4/Group 52/students/Daniël 't Mannetje/student_info.yaml
@@ -2,4 +2,4 @@ thesisTitle: Robust Planning for Sokoban with Probabilistic Inference
 paperUrl: 'https://resolver.tudelft.nl/uuid:3a8ec251-49d7-4742-b807-1d54832776b5'
 firstName: Daniël
 lastName: '''t Mannetje'
-repositoryUrl: 'https://doi.org/10.5281/zenodo.15715784'
+repositoryUrl: ''
