--- a/content/posters/2025/Q4/Group 52/students/Kasper van Duijne/student_info.yaml
+++ b/content/posters/2025/Q4/Group 52/students/Kasper van Duijne/student_info.yaml
@@ -2,4 +2,4 @@ thesisTitle: Finding Robust Schedules in the Stochastic Resource Constrained Pro
 paperUrl: 'https://repository.tudelft.nl/record/uuid:52934ffe-bb39-49d5-9938-75067874a6da'
 firstName: Kasper
 lastName: van Duijne
-repositoryUrl: 'https://zenodo.org/records/15716001'
+repositoryUrl: ''
