--- a/content/posters/2025/Q4/Group 52/students/Koen van der Knaap/student_info.yaml
+++ b/content/posters/2025/Q4/Group 52/students/Koen van der Knaap/student_info.yaml
@@ -2,4 +2,4 @@ thesisTitle: Robust Plan Inference in the Keys and Doors Problem
 paperUrl: 'https://resolver.tudelft.nl/uuid:7de21e52-f271-421f-933c-6f7529307978'
 firstName: Koen
 lastName: van der Knaap
-repositoryUrl: 'https://doi.org/10.5281/zenodo.15711791'
+repositoryUrl: ''
