--- a/content/posters/2025/Q4/Group 11/students/Max Lauf/student_info.yaml
+++ b/content/posters/2025/Q4/Group 11/students/Max Lauf/student_info.yaml
@@ -1,4 +1,4 @@
-thesisTitle: From Beats to Being: Using adolescents’ listening data to identify developmental trajectories
+thesisTitle: 'From Beats to Being: Using adolescents’ listening data to identify developmental trajectories'
 paperUrl: "https://pure.tudelft.nl/admin/files/247334094/From-Beats-to_Being_Max_Lauf.pdf"
 firstName: Max
 lastName: Lauf
