--- a/content/posters/2025/Q4/Group 11/students/Sander Bakker/student_info.yaml
+++ b/content/posters/2025/Q4/Group 11/students/Sander Bakker/student_info.yaml
@@ -1,4 +1,4 @@
-thesisTitle: From Hook to Chorus: Analyzing the relation between song structure and music listening behavior of children
+thesisTitle: 'From Hook to Chorus: Analyzing the relation between song structure and music listening behavior of children'
 paperUrl: "https://pure.tudelft.nl/admin/files/247340255/Sander_Bakker_-_From_Hook_to_Chorus.pdf"
 firstName: Sander
 lastName: Bakker
