--- a/content/posters/2025/Q4/Group 38/students/Ísak Jónsson/student_info.yaml
+++ b/content/posters/2025/Q4/Group 38/students/Ísak Jónsson/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Exploring the latent space learned by scRNA-seq foundation models to identify AD subtypes
-paperUrl: 'https://drive.google.com/file/d/1n2ddllJurxTZwrv3zzoebfj1wES2lqsO/view?usp=sharing'
+paperUrl: ''
 firstName: Ísak 
 lastName: Jónsson
 repositoryUrl: ''
