Add Group 11 files.

--- a/content/posters/2025/Q4/Group 11/students/Erkin Basol/student_info.yaml
+++ b/content/posters/2025/Q4/Group 11/students/Erkin Basol/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Analyzing the Impact of Acoustic Features on Music Recommendation for Children Across Age Groups
-paperUrl: "https://pure.tudelft.nl/admin/files/247335385/erkinbasol_final_version_rp.pdf"
+paperUrl: "https://repository.tudelft.nl/record/uuid:c0746b7a-ecb6-416f-a5ac-f6cad4bd0a70"
 firstName: Erkin
 lastName: Basol
 repositoryUrl: "https://github.com/Protestak/RP_Project"
