--- a/content/posters/2025/Q4/Group 11/students/Francisco Duque de Morais Amaro/student_info.yaml
+++ b/content/posters/2025/Q4/Group 11/students/Francisco Duque de Morais Amaro/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: oung Minds and Popular Charts : An empirical study on the mainstream music consumption of children
-paperUrl: "https://pure.tudelft.nl/admin/files/247334908/Francisco_Amaro_-_Bsc_Thesis.pdf"
+paperUrl: "https://resolver.tudelft.nl/uuid:de528fd6-4ca8-457b-ab26-9dee722e3800"
 firstName: Francisco
 lastName: Deque de Morais Amaro
 repositoryUrl: ""
