--- a/content/posters/2025/Q4/Group 11/students/Sander Bakker/student_info.yaml
+++ b/content/posters/2025/Q4/Group 11/students/Sander Bakker/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: From Hook to Chorus: Analyzing the relation between song structure and music listening behavior of children
-paperUrl: "https://pure.tudelft.nl/admin/files/247340255/Sander_Bakker_-_From_Hook_to_Chorus.pdf"
+paperUrl: "https://resolver.tudelft.nl/uuid:a7dfa019-32aa-4a54-8972-f14a588a078f"
 firstName: Sander
 lastName: Bakker
 repositoryUrl: "https://github.com/sbakker6/MusicRSAndChildren"
