--- a/content/posters/2025/Q4/Group 11/students/Teun Bosch/student_info.yaml
+++ b/content/posters/2025/Q4/Group 11/students/Teun Bosch/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: How demographic features impact the accuracy of recommendations
-paperUrl: "https://pure.tudelft.nl/admin/files/247335253/FinalReport_TeunBosch.pdf"
+paperUrl: "https://repository.tudelft.nl/record/uuid:aef2140d-4831-417c-bbdb-1921f3f85b5e"
 firstName: Teun
 lastName: Bosch
 repositoryUrl: "https://github.com/Teun-2020/RP_Recommender"
