--- a/content/posters/2025/Q4/Group 11/students/Max Lauf/student_info.yaml
+++ b/content/posters/2025/Q4/Group 11/students/Max Lauf/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: From Beats to Being: Using adolescents’ listening data to identify developmental trajectories
-paperUrl: "https://pure.tudelft.nl/admin/files/247334094/From-Beats-to_Being_Max_Lauf.pdf"
+paperUrl: "https://repository.tudelft.nl/record/uuid:f73f6aaf-f000-4318-83a3-bb79d26656cd"
 firstName: Max
 lastName: Lauf
 repositoryUrl: ""
