Add the 2 missing paper URLs to Y2025 Q4 G37

--- a/content/posters/2025/Q4/Group 37/students/Beatriz Barroso/student_info.yaml
+++ b/content/posters/2025/Q4/Group 37/students/Beatriz Barroso/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: 'Investigating the correlation between prior programming experience and cyclomatic code complexity in student software projects'
-paperUrl: ''
+paperUrl: 'https://repository.tudelft.nl/record/uuid:190d0699-cea9-430c-bee2-ee1f52773f81'
 firstName: 'Beatriz'
 lastName: 'Barroso'
 repositoryUrl: 'https://github.com/bee178/process_CC'
