--- a/content/posters/2025/Q4/Group 58/students/Mike Erkemeij/student_info.yaml
+++ b/content/posters/2025/Q4/Group 58/students/Mike Erkemeij/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Comparative analysis of two network anonymization settings using Integer Linear Programming
-paperUrl: ''
+paperUrl: 'https://resolver.tudelft.nl/uuid:298f8e69-ce9b-423a-992b-17efd5015bd6'
 firstName: Mike
 lastName: Erkemeij
 repositoryUrl: ''
